--- a/apps/users/templates/usuarios/gestion_usuarios.html
+++ b/apps/users/templates/usuarios/gestion_usuarios.html
@@ -144,6 +144,9 @@
         <div class="card-body">
           <div class="table-responsive">
             <table class="table table-hover table-striped align-middle mb-0">
+              <h6 class="text-danger fw-bold mb-3 d-flex align-items-center">
+              <i class="bi bi-people-fill me-2"></i>Usuarios Registrados
+              </h6>
               <thead class="table-light">
                 <tr>
                   <th>Usuario</th>
