--- a/apps/account/templates/login.html
+++ b/apps/account/templates/login.html
@@ -36,7 +36,7 @@
                     <a href="{% url 'password_reset_request' %}" class="small text-decoration-none">¿Olvidaste tu contraseña?</a>
                 </div>
 
-                <button type="submit" class="btn btn-primary w-100 mt-3">Ingresar</button>
+                <button type="submit" class="btn btn-danger w-100 mt-3">Ingresar</button>
             </form>
         </div>
     </div>
